--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= @article.title%></h1>
 <p><%= @article.body%></p>
 <%= link_to "<< back to Articles", articles_path%>
+<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article??"} %>
